objects/Opportunity.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <businessProcesses>
        <fullName>Renewal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>2%2E0 To Churn</fullName>
        </values>
        <values>
            <fullName>3%2E0 Prove</fullName>
        </values>
        <values>
            <fullName>4%2E0 Renewal Communicated</fullName>
        </values>
        <values>
            <fullName>5%2E0 Closing</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <description>Manual Process, 51-500 employees</description>
        <isActive>true</isActive>
        <values>
            <fullName>0%2E0 New</fullName>
        </values>
        <values>
            <fullName>0%2E1 Contacted</fullName>
        </values>
        <values>
            <fullName>0%2E2 Replied</fullName>
        </values>
        <values>
            <fullName>1%2E0 Initial Scoping</fullName>
        </values>
        <values>
            <fullName>2%2E0 Consult</fullName>
        </values>
        <values>
            <fullName>3%2E0 Prove</fullName>
        </values>
        <values>
            <fullName>4%2E0 Proposal</fullName>
        </values>
        <values>
            <fullName>5%2E0 Closing</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Enterprise</fullName>
        <description>Manual Process, 500+ employees</description>
        <isActive>true</isActive>
        <values>
            <fullName>0%2E0 New</fullName>
        </values>
        <values>
            <fullName>0%2E1 Contacted</fullName>
        </values>
        <values>
            <fullName>0%2E2 Replied</fullName>
        </values>
        <values>
            <fullName>1%2E0 Initial Scoping</fullName>
        </values>
        <values>
            <fullName>2%2E0 Consult</fullName>
        </values>
        <values>
            <fullName>3%2E0 Prove</fullName>
        </values>
        <values>
            <fullName>4%2E0 Proposal</fullName>
        </values>
        <values>
            <fullName>5%2E0 Closing</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Self Service</fullName>
        <description>Automated Process, 0-51 employees</description>
        <isActive>true</isActive>
        <values>
            <fullName>0%2E1 Contacted</fullName>
        </values>
        <values>
            <fullName>0%2E2 Replied</fullName>
        </values>
        <values>
            <fullName>1%2E0 Initial Scoping</fullName>
        </values>
        <values>
            <fullName>2%2E0 Consult</fullName>
        </values>
        <values>
            <fullName>3%2E0 Prove</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Free Trial</fullName>
        </values>
        <values>
            <fullName>Trial Expired</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account Executive on the opportunity, temp field to hold AE to assign opps to their SDRs</inlineHelpText>
        <label>AE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>IF(IsPickVal( RevRec_Type__c ,&quot;Non-Recurring&quot;),0,

IF ( TotalOpportunityQuantity &gt; 0,
IF ( Price_Book__c = &quot;monthly&quot;,
IF(Amount / TotalOpportunityQuantity &gt; 209, Amount- NRR_Amount__c  , (Amount-NRR_Amount__c)*12), Amount-NRR_Amount__c),Amount-NRR_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARR Calculation, for Monthly price books with per-unit pricing is &lt; 209, amount * 12
$0 for Subscription type=&quot;Non-Recurring&quot;</inlineHelpText>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <formula>ARR__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARR formula field / 12</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRR__c</fullName>
        <formula>IF(IsPickVal( RevRec_Type__c ,&quot;Non-Recurring&quot;), Amount ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Non Recurring Revenue</inlineHelpText>
        <label>NRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Now__c</fullName>
        <description>formula field for LeanData Date stamp fields for LD Routing Date/Time</description>
        <formula>NOW()</formula>
        <inlineHelpText>formula field for LeanData Date stamp fields</inlineHelpText>
        <label>NOW()</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lost__c</fullName>
        <formula>IsClosed &amp;&amp; Not(IsWon)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <label>Need</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <formula>Project__r.Master_User_Contact__r.GCLID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCLID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs__c</fullName>
        <label>Need</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consolidate insights</fullName>
                </value>
                <value>
                    <fullName>Prioritization</fullName>
                </value>
                <value>
                    <fullName>Roadmapping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>If selected Other - enter value we have helped the create.</description>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pains__c</fullName>
        <description>What is the pain they are addressing? Why are they seeking a solution?</description>
        <inlineHelpText>What is the pain they are addressing? Why are they seeking a solution?</inlineHelpText>
        <label>Identify Pain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S_0_1__c</fullName>
        <formula>Max_Stage_w_Won__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Has Hit Stage 0.1 or higher</inlineHelpText>
        <label>S-0.1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_0_2__c</fullName>
        <formula>Max_Stage_w_Won__c &gt; 0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Has Hit Stage 0.2 or higher</inlineHelpText>
        <label>S-0.2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_1_0__c</fullName>
        <formula>Max_Stage_w_Won__c  &gt;= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Has Hit Stage 1.0 or higher</inlineHelpText>
        <label>S-1.0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_Sort__c</fullName>
        <formula>Account_Customer_Status__c + &quot; &quot; + text( StageName ) + text( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[F] Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <formula>1</formula>
        <label>Unique #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Date__c</fullName>
        <description>SDR Field: date the meeting actually happened</description>
        <inlineHelpText>SDR initial meeting date when the meeting actually happened(formerly DM Date)</inlineHelpText>
        <label>Initial Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MEDDICC__c</fullName>
        <formula>If(MEDDICC_Score__c&gt;79,&quot;Strong&quot;,
IF(MEDDICC_Score__c&gt;42,&quot;Moderate&quot;,
&quot;Weak&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MEDDICC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metrics__c</fullName>
        <inlineHelpText>How will the technical buyer measure the success of our solution?”</inlineHelpText>
        <label>Metrics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Services Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Partners</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Identifying opportunities for user and system</description>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Trainer associated to this Opportunity on the Productboard team</inlineHelpText>
        <label>Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Urgency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_ARR__c</fullName>
        <formula>If(IsWon,1,0) *  ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated ARR from Won Opportunities</inlineHelpText>
        <label>Won ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <label>Features_migrate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_trial__c</fullName>
        <formula>if(IsClosed,FALSE,and(today()&lt;= CloseDate, RecordType.Name = &quot;Self Service&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In trial?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Logo__c</fullName>
        <formula>ISPICKVAL( Type, &quot;New Business&quot;) &amp;&amp;
 ISPICKVAL(Amendment_Type__c, &quot;&quot;)</formula>
        <label>New Logo?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Due__c</fullName>
        <description>Trje if close date is in the past for open opps (LJ)</description>
        <formula>If( IsClosed , False,
If(  CloseDate - Today () &lt; 0,True,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if close date is in the past for open opps (LJ)</inlineHelpText>
        <label>Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SE_Notes__c</fullName>
        <inlineHelpText>Notes section for the Sales Engineer</inlineHelpText>
        <label>SE Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_Need__c</fullName>
        <label>Top Need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consolidate insights</fullName>
                </value>
                <value>
                    <fullName>Prioritization</fullName>
                </value>
                <value>
                    <fullName>Roadmapping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AE_Tenure__c</fullName>
        <formula>(CloseDate -  Owner.Start_Date__c)/30.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Tenure (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <label>Authority</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Lost__c</fullName>
        <inlineHelpText>Date Closed Lost</inlineHelpText>
        <label>Date Lost</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Obstacles__c</fullName>
        <label>Obstacles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_SDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other SDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_ARR__c</fullName>
        <inlineHelpText>ARR being renewed or replaced by the current opportunity</inlineHelpText>
        <label>Prior ARR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PushCount__c</fullName>
        <label>PushCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDR_Notes__c</fullName>
        <inlineHelpText>- details on customer&apos;s org structure, number of PMs, their roles, team size, leadership, cross-functional groups to be included in PB program</inlineHelpText>
        <label>SDR Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subspaces__c</fullName>
        <inlineHelpText>Add additional Subspaces included in this opportunity.</inlineHelpText>
        <label>Subspaces</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ARR_Hidden__c</fullName>
        <formula>IF(IsPickVal( RevRec_Type__c ,&quot;Non-Recurring&quot;),0,

IF (  TotalOpportunityQuantity &gt; 0, 
    IF ( Price_Book__c = &quot;monthly&quot;,
        IF(Amount /  TotalOpportunityQuantity &gt; 299, Amount , Amount*12), Amount),Amount))
- Prior_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Contract Value, based on ARR prorated to Subscription Term Months and Non Subscription Amount</inlineHelpText>
        <label>ARR Test Field-Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_wo_NRR__c</fullName>
        <formula>IF(IsPickVal( RevRec_Type__c ,&quot;Non-Recurring&quot;),0,

IF ( TotalOpportunityQuantity &gt; 0,
IF ( Price_Book__c = &quot;monthly&quot;,
IF(Amount / TotalOpportunityQuantity &gt; 300, Amount- NRR_Amount__c  , (Amount-NRR_Amount__c)*12), Amount-NRR_Amount__c),Amount-NRR_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR w/o NRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Churn_Date__c</fullName>
        <label>Churn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NRR_Amount__c</fullName>
        <label>NRR Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.NRR__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>Text(Owner.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lookup to opportunity owner team on user record</inlineHelpText>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <formula>Pricebook2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Book</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>If( IsWon ,30 - Year(today()) + Year (CloseDate),0) +
If (Past_Due__c , -1* Round(LN(Today () - CloseDate ),0),0) + 
If (Not(IsWon) &amp;&amp; IsClosed, -2,0) +  Max_Stage_Achieved__c + 

Case( Project_Backend_Stage__c ,
&quot;Active Contract&quot;,20,
&quot;Active Subscription&quot;,10,
&quot;Churned Customer&quot;,3,
&quot;Deleted&quot;,-10,
&quot;Trial Active&quot;,1,
&quot;Trial Expired&quot;,-1,
&quot;&quot;,-12,
-3)

+  Stage_Numeric__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sort order of opportunities</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Stack__c</fullName>
        <inlineHelpText>ex: JIRA, Trello, Git, Asana, surveygizma, pivotal tracker, etc.</inlineHelpText>
        <label>Tech Stack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Win_Reason__c</fullName>
        <inlineHelpText>What is the deal story - who did we work with, learnings, why did we win?</inlineHelpText>
        <label>Win Reason (Eval, Learnings, Why we won)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_MRR__c</fullName>
        <formula>Account.Project_s_MRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lookup to account MRR</inlineHelpText>
        <label>Account MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collections__c</fullName>
        <label>Collections</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <inlineHelpText>What is our competition, and what is their strategy to beat us?</inlineHelpText>
        <label>Competition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coronavirus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this opportunity was either closed lost, pushed, etc for reasons due to the Coronavirus.</inlineHelpText>
        <label>Coronavirus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Pipeline__c</fullName>
        <formula>AND(
NOT(RecordType.DeveloperName = &quot;Self Service&quot;), 
Max_Stage_Achieved__c &gt;= 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor [pb]</fullName>
                </value>
                <value>
                    <fullName>No Decision / Ghosting</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                    <label>Pricing (Cost)</label>
                </value>
                <value>
                    <fullName>Feature Gap [pb]</fullName>
                </value>
                <value>
                    <fullName>Tool Consolidation [pb]</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Duplicate account_opportunity</fullName>
                    <label>Duplicate account/opportunity</label>
                </value>
                <value>
                    <fullName>Sales declined</fullName>
                </value>
                <value>
                    <fullName>Does not meet ICP</fullName>
                </value>
                <value>
                    <fullName>Self Service Subscribed</fullName>
                </value>
                <value>
                    <fullName>Sales Decline after/during DM</fullName>
                </value>
                <value>
                    <fullName>Automatic - Space Deleted/Expired</fullName>
                </value>
                <value>
                    <fullName>Adoption (Usage) [pb]</fullName>
                </value>
                <value>
                    <fullName>Lack of Value (Outcomes) [pb]</fullName>
                </value>
                <value>
                    <fullName>Out of Business/Acquired</fullName>
                </value>
                <value>
                    <fullName>Champion Change</fullName>
                </value>
                <value>
                    <fullName>Performance [pb]</fullName>
                </value>
                <value>
                    <fullName>Usability [pb]</fullName>
                </value>
                <value>
                    <fullName>Customer Experience [pb]</fullName>
                </value>
                <value>
                    <fullName>No Data</fullName>
                </value>
                <value>
                    <fullName>Security [pb]</fullName>
                </value>
                <value>
                    <fullName>Project on hold</fullName>
                </value>
                <value>
                    <fullName>Reason Missing</fullName>
                </value>
                <value>
                    <fullName>Legal/Security Issue [pb]</fullName>
                </value>
                <value>
                    <fullName>Left Company</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Alternate Need</fullName>
                </value>
                <value>
                    <fullName>Trial Loss Reason</fullName>
                </value>
                <value>
                    <fullName>Trial Created Unintentionally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Loss_Churn_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_ID_Long__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 Digit Opportunity ID</inlineHelpText>
        <label>Opp ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevRec_Type__c</fullName>
        <inlineHelpText>Subscription Type (Annual/Monthly/Non-Recurring)</inlineHelpText>
        <label>RevRec Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subscription_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_0_1_Sales__c</fullName>
        <formula>Max_Stage_Achieved__c &gt;= 0.1</formula>
        <inlineHelpText>Actually hit stage 0.1</inlineHelpText>
        <label>S-0.1-Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_0_2_Sales__c</fullName>
        <formula>Max_Stage_Achieved__c &gt;= 0.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S-0.2-Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_1_0_Sales__c</fullName>
        <formula>Max_Stage_Achieved__c &gt;= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S-1.0-Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_Won_Sales__c</fullName>
        <formula>and(Max_Stage_Achieved__c &gt;= 1 ,  IsWon)</formula>
        <inlineHelpText>Is Sales Credited Won</inlineHelpText>
        <label>S-Won-Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Owner__c</fullName>
        <formula>CONTAINS(UPPER(Text(Owner.Team__c )), &quot;-AE&quot;) ||
CONTAINS(UPPER(Text(Owner.Team__c )), &quot;-SDR&quot;) ||
CONTAINS(UPPER(Text(Owner.Team__c )), &quot;AM-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks if Owner &quot;Team&quot; is in sales, formula field</inlineHelpText>
        <label>Sales Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zapier_test__c</fullName>
        <description>Created for Zapier test and will be deleted on Friday Oct 4th</description>
        <label>Zapier test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New feedback</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Post-discovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Products__c</fullName>
        <label># of Opp Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <formula>TIMEVALUE( CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time when opportunity was created</inlineHelpText>
        <label>Created Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Custom_Terms__c</fullName>
        <inlineHelpText>Include any custom language in the MSA for: Indemnification, Limitation of Liability, Non solicitation clauses, or
Intellectual Property (IP).</inlineHelpText>
        <label>MSA Custom Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DPA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for IronClad integration for DPA</description>
        <inlineHelpText>Does this deal require a DPA?</inlineHelpText>
        <label>DPA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEDDIC_Count__c</fullName>
        <formula>IF(IsPickVal(Metrics_Score__c,&quot;&quot;),0, 1) +
IF(IsPickVal(Economic_Buyer_Score__c,&quot;&quot;),0, 1) +
IF(IsPickVal(Decision_Criteria_Score__c ,&quot;&quot;),0, 1) +
IF(IsPickVal(Decision_Process_Score__c,&quot;&quot;),0, 1) +
IF(IsPickVal(Identify_Pain_Score__c,&quot;&quot;),0, 1) +
IF(IsPickVal(Champion_Score__c,&quot;&quot;),0, 1) +
IF(IsPickVal(Competition_Score__c,&quot;&quot;),0, 1)</formula>
        <label>MEDDIC Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used for Ironclad integrations for MSA</description>
        <inlineHelpText>Is the MSA Required for this deal?</inlineHelpText>
        <label>MSA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Products__c</fullName>
        <label>Max Products</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <description>SDR Meeting Type</description>
        <inlineHelpText>What type of activity booked this meeting.</inlineHelpText>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDR_Meeting_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Charges__c</fullName>
        <label>Open Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Payouts__c</fullName>
        <label>Open Payouts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_ID__c</fullName>
        <formula>Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Owner User ID</inlineHelpText>
        <label>Opp Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>TEXT(Owner.Sales_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Version__c</fullName>
        <label>Plan Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Plan__c</fullName>
        <label>Product Plan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Risk__c</fullName>
        <label>Renewal Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_0_1_Status__c</fullName>
        <formula>IF(IsWon&amp;&amp;  Max_Stage_Achieved__c =0,&quot;Won in SS&quot; ,
IF( S_Disqual_No_Contact__c ,&quot;Disqualified&quot;,
IF(  S_0_1__c ,&quot;Contacted&quot;,&quot;Unknown&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S-0.1 Status</label>
        <type>Text</type>
    </fields>
</CustomObject>